# topology

./: .gitignore  README.md  pyproject.toml
frontend/: .env.example  package-lock.json  package.json  token.ts  vite.config.ts
frontend/src/: App.tsx  Whiteboard.tsx  index.css
frontend/src/components/: ApiKeyModal.tsx  DocumentationView.tsx  InfoPopup.tsx  SuggestionsPopup.tsx  TranscriptInput.tsx  WorkflowPicker.tsx  WorkflowToolbar.tsx
frontend/src/components/ui/: DatabaseShape.tsx  FrontendShape.tsx  GPTRealtimeShape.tsx  LLMShape.tsx  ServerShape.tsx  UserShape.tsx
frontend/src/hooks/: useArchitectureAnalysis.ts  useOpenAIRealtime.ts  useRealtime.ts  useWorkflow.ts
frontend/src/lib/: markdownGenerator.ts  secureStorage.ts  transcriptProcessor.ts  workflowStorage.ts
frontend/src/types/: workflow.ts
projects/api/: pyproject.toml
projects/api/src/api/: main.py
projects/backend/: pyproject.toml
projects/backend/src/backend/: main.py  mapping.py
projects/transcribe/: pyproject.toml
projects/transcribe/src/transcribe/: agent.py  realtime.py  voice.py
scripts/: mic4.py  microphone.py  realtime_microphone.py
