[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend server for Whiteboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/api"]
