[project]
name = "transcribe"
version = "0.1.0"
description = "Transcription service for Whiteboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/transcribe"]

